# HerCode_Compiler

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
include/: ast.h  codegen.h  ir.h  lexer.h
src/: ast.c  codegen.c  ir.c  lexer.c  main.c  parser.c
test/: her.hercode  inline.hercode
